@@ -7,6 +7,7 @@ ALL:
 
 DH:
 * Add function to calculate power gain from Shear/Fracture so it's easier to check to not overcap (shear/fracture now gains additional pain when in meta)
+* Add rotation during meta
 
 DRUID: 
 * replace swipe to swipe_bear again (different id's after 8.2.0)
